overlapping and padding issues fixes
search and filter were overlapping and cards in project list required some padding for mobile responsive design on Homepage

--- a/src/components/ProjectList/css/cards-container.css
+++ b/src/components/ProjectList/css/cards-container.css
@@ -6,3 +6,9 @@
   padding: 1vw;
   overflow: hidden;
 }
+
+@media screen and (max-width: 500px) {
+  .containerLayout{
+    padding: 15px;
+  }
+}
