--- a/src/components/ProjectList/css/search.css
+++ b/src/components/ProjectList/css/search.css
@@ -7,18 +7,23 @@
 
 #search {
   padding-left: 10px;
-  padding-right: 10px;
   border: none;
   border-radius: 3px;
   width: 100%;
   height: 32px;
   font-size: 15px;
   text-align: center;
-  margin-top: 1px;
   border: 1px solid #DCDCDC;
 }
 
 .inputContainer {
    width: 47%;
    margin-top: 40px;
+}
+
+@media screen and (max-width: 500px) {
+  .inputContainer {
+    width: 45%;
+    margin-top: 40px;
+  }
 }
